[project]
name = "IP-Verification-System"
version = "0.0.1"
description = ""
authors = [{ name="Nerd1029"} ]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
