[project]
name = "ipvs-lib"  # Must exactly match the PyPI project name
version = "0.0.1"
description = "A package for verifying IP addresses"
authors = [{ name = "Nerd1029", email = "ljbarajr@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }  # Ensures packages are automatically discovered
